--- a/content/poster/formative_formulation/cite.bib
+++ b/content/poster/formative_formulation/cite.bib
@@ -1,10 +1,10 @@
-@Misc{Morrissey2019,
-  author       = {John P. Morrissey},
+@Misc{Hailenchael2019Moonshot,
+  author       = {Abrhaley Arefaine Hailenchael},
+  title        = {Moonshot Ethiopia Bootcamp: International Innovation and Academic Collaboration},
   howpublished = {Poster},
-  month        = mar,
-  note         = {Poster presented at: Royal Society of Chemistry Formative Formulation Workshop, Maxwell Centre, University of Cambridge},
-  title        = {Multiscale Modelling of a Twin Screw Granulator [Poster Presentation]},
+  month        = jun,
   year         = {2019},
-  abstract     = {Wet granulation is a process used to create larger stable agglomerates (granules) from fine powders. However, despite wide adoption, it is often inefficiently operated, with high recycle ratios in continuous processes and high rejection rates in batch processes. This numerical study simulates a GEA ConsiGma™ 1 Twin Screw Granulator (TSG), following a standard framework for model-driven design.},
-  doi          = {10.13140/RG.2.2.35252.58240},
+  note         = {Poster / program presentation for the Moonshot Ethiopia Bootcamp jointly organized by Thomas More University of Applied Sciences (Belgium) and Mekelle University (Ethiopia)},
+  abstract     = {The Moonshot Ethiopia Bootcamp was a short-term international program that brought together students and staff from Thomas More University of Applied Sciences, Belgium, and Mekelle University, Ethiopia. The program focused on innovation-driven academic collaboration, cross-cultural teamwork, and project-based learning addressing societal and development challenges in higher education.},
+  url          = {https://www.mu.edu.et/}
 }
